# AUT-FPGA-Challenge

./: .gitignore  CMakeLists.txt  Makefile  README.md  common.h  serial.c  serial.h
docs/: Alpha-beta-pruning.txt  Connect-Four-Slides.pdf.REMOVED.git-id  Research and Implementation of Dots-and-Boxes Game System.pdf.REMOVED.git-id  TODO-list.md  connect-4.txt  connect-6.txt  dots-and-boxes.txt  score-4.txt
res/: FPGA-Contest 93-2.docx  fpga contest 94-2.docx
res/FPGA-Contest-94/Dots-and-Boxes/: fpga contest 94-2.docx
res/FPGA-Contest-94/Score-4/: fpga contest 94-2.docx  fpga contest 94-2.pdf.REMOVED.git-id
res/FPGA-Contest-94/TRAX/: fpga contest 94-2.docx  fpga contest 94-2.pdf.REMOVED.git-id
src/: CMakeLists.txt  FPGA-Judge  Makefile  TODO-list.txt  command.c  command.h  common.c  common.h  game.c  game.h  main.c  serial.c  serial.h  tcp.c  tcp.h
test/: Serial.py  Tester.py
test/senario/: s1w.txt  s2b.txt  s3b.txt  s3w.txt  s4b.txt  s4w.txt  s5b.txt  s5w.txt  s6b.txt  s6w.txt  s7b.txt  s7w.txt  s8b.txt  s8w.txt
